<resources>
    <string name="app_name">Android Postman</string>
    <string name="enter_url">Enter URL</string>
    <string name="pick_http_type">Request type</string>
    <string name="get">GET</string>
    <string name="post">POST</string>
    <string name="create_request">Send Request</string>
    <string name="headers">Headers</string>
    <string name="add_headers">Add Headers</string>
    <string name="enter_json_body">Enter json body</string>
    <string name="select_File_to_upload">Select File to Upload</string>
    <string name="remove_image">Remove Image</string>
    <string name="history">History</string>

    <string name="request_info">Request Info</string>

    <string name="response_info">Response Info</string>
    <string name="request_result">Request Result</string>
    <string name="request_history">Request History</string>
    <string name="all">All</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="sort_by_execution_time">Sort by execution time</string>
    <string name="selected_file_name">Selected File name:</string>
</resources>