<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/http_type_title"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/pick_http_type"/>


    <RadioGroup
        android:id="@+id/http_type_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:checkedButton="@id/get_button">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/get_button"
            android:text="@string/get"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/post"
            android:id="@+id/post_button"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>