<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".history.view.HistoryFragment"
    android:orientation="vertical"
    android:id="@+id/history_fragment"
    android:background="?android:colorBackground"
    android:focusable="true"
    android:clickable="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/history_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/request_history"
        app:navigationIcon="@drawable/baseline_arrow_back_24"/>
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C8C8C8"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="8dp">
            <!--    Filter Section-->

            <HorizontalScrollView
                android:id="@+id/filter_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadeScrollbars="true"
                android:scrollbarFadeDuration="1000"
                android:scrollbarDefaultDelayBeforeFade="0"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:clipToPadding="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <RadioGroup
                        android:id="@+id/http_type_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginEnd="24dp"
                        android:checkedButton="@id/all_request_type"
                        >

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/all"
                            android:id="@+id/all_request_type"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/get"
                            android:id="@+id/get_type"/>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/post"
                            android:id="@+id/post_type"/>


                    </RadioGroup>

                    <RadioGroup
                        android:id="@+id/http_status_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:checkedButton="@id/all_request"
                        >
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/all"
                            android:id="@+id/all_request"/>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/success"
                            android:id="@+id/success_requests"/>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/failed"
                            android:id="@+id/failed_requests"/>
                    </RadioGroup>
                </LinearLayout>
            </HorizontalScrollView>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_execution_time"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/sort_by_time"
                android:paddingTop="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/request_history_recycler_view"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="50"
                tools:listitem="@layout/history_request_item_layout"
                />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/history_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>