<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home_fragment"
    tools:context=".home.view.HomeFragment"
    android:background="?android:colorBackground"
    android:focusable="true"
    android:clickable="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Home"
        app:menu="@menu/home_menu"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C8C8C8"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="8dp"
            android:clipToPadding="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/send_request"
            android:fitsSystemWindows="false"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp">

                <!--Enter url textfield-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/request_url_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/url_edit_text"
                        android:hint="@string/enter_url"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!--Select request type-->
                <include
                    android:id="@+id/http_request_type"
                    layout="@layout/http_request_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/request_url_input_layout"
                    android:layout_marginTop="8dp"/>

                <!--Headers-->
                <include
                    android:id="@+id/headers"
                    layout="@layout/header_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/http_request_type"
                    android:layout_marginTop="8dp"
                    />

                <!--Body-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/body_of_post_request_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/headers"
                    android:layout_marginTop="16dp"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_input_layout_body"
                        app:layout_constraintTop_toTopOf="parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:inputType="textMultiLine"
                            android:scrollbars="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top|start"
                            android:id="@+id/body_edit_text"
                            android:hint="@string/enter_json_body"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/text_input_layout_body"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="16dp"
                        style="?attr/materialButtonOutlinedStyle"
                        android:text="@string/select_File_to_upload"
                        android:id="@+id/file_to_upload"/>

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        app:layout_constraintTop_toBottomOf="@id/file_to_upload"
                        android:layout_marginTop="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:scaleType="centerCrop"
                        android:adjustViewBounds="true"
                        android:id="@+id/selected_image"
                        android:visibility="gone"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@id/selected_image"
                        app:layout_constraintEnd_toEndOf="@id/selected_image"
                        app:layout_constraintTop_toBottomOf="@id/selected_image"
                        android:id="@+id/remove_image"
                        style="?attr/materialButtonOutlinedStyle"
                        android:text="@string/remove_image"
                        android:visibility="gone"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/send_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:text="@string/create_request"
            android:textAllCaps="false"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>